name:             bounty
version:          0.0.0.1
synopsis:         A drop-in replacement for memcached that also supports a subset of the relational algebra
homepage:         https://github.com/whittle/bounty
license:          MIT
license-file:     LICENSE.txt
author:           Jason Whittle
maintainer:       jason.whittle@gmail.com
copyright:        Copyright (c) 2013 Jason A. Whittle
category:         Network
build-type:       Simple
cabal-version:    >= 1.8
stability:        experimental
tested-with:      GHC == 7.4.2
bug-reports:      https://github.com/whittle/bounty/issues
description:
  Bounty is a drop-in replacement for memcached that also supports a
  subset of the relational algebra. Inspired by Neha Narula’s
  presentation about Pequod at Ricon East 2013. N.B. Bounty is
  currently highly experimental, and not even kind of complete.

extra-source-files:
  README.md
  LICENSE.txt

executable bounty
  hs-source-dirs: src
  main-is:        Bounty.hs
  ghc-options:    -Wall

  build-depends:  base                          >= 4.5
                , bounty
                , conduit                       >= 1
                , network-conduit               >= 1

library
  hs-source-dirs: lib
  ghc-options:    -Wall

  exposed-modules:
    Bounty.Application
    Network.Memcached.Command
    Network.Memcached.Parser
    Network.Memcached.Types

  build-depends:  base                          >= 4.5
                , ghc-prim
                , array                         >= 0.4
                , attoparsec                    >= 0.10
                , attoparsec-conduit            >= 1
                , bytestring                    >= 0.9
                , conduit                       >= 1
                , containers                    >= 0.4
                , transformers                  >= 0.2.2

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Tests.hs
  hs-source-dirs: test

  other-modules:
    Tests.Parser

  build-depends:  base                          >= 4.5
                , Cabal                         >= 1.14
                , HUnit                         >= 1.2
                , test-framework                >= 0.8
                , test-framework-hunit          >= 0.3
                , test-framework-th             >= 0.2
                , attoparsec                    >= 0.10
                , bounty

source-repository head
  type:           git
  location:       https://github.com/whittle/bounty
